@@ -1232,7 +1232,6 @@ block|}
 block|}
 block|}
 DECL|method|incRef
-specifier|private
 name|void
 name|incRef
 parameter_list|(
@@ -1513,6 +1512,70 @@ argument_list|(
 name|fileName
 argument_list|)
 expr_stmt|;
+block|}
+block|}
+DECL|method|decRef
+name|void
+name|decRef
+parameter_list|(
+name|SegmentInfos
+name|segmentInfos
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+specifier|final
+name|int
+name|size
+init|=
+name|segmentInfos
+operator|.
+name|size
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|size
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|SegmentInfo
+name|segmentInfo
+init|=
+name|segmentInfos
+operator|.
+name|info
+argument_list|(
+name|i
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|segmentInfo
+operator|.
+name|dir
+operator|==
+name|directory
+condition|)
+block|{
+name|decRef
+argument_list|(
+name|segmentInfo
+operator|.
+name|files
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 DECL|method|getRefCount
