@@ -1177,21 +1177,6 @@ operator|=
 literal|"addIndexesNoOptimize(Directory[])"
 expr_stmt|;
 block|}
-name|String
-name|testName
-init|=
-literal|"disk full test for method "
-operator|+
-name|methodName
-operator|+
-literal|" with disk full at "
-operator|+
-name|diskFree
-operator|+
-literal|" bytes with autoCommit = "
-operator|+
-name|autoCommit
-decl_stmt|;
 name|int
 name|cycleCount
 init|=
@@ -1275,6 +1260,11 @@ decl_stmt|;
 name|long
 name|thisDiskFree
 decl_stmt|;
+name|String
+name|testName
+init|=
+literal|null
+decl_stmt|;
 if|if
 condition|(
 literal|0
@@ -1326,25 +1316,20 @@ if|if
 condition|(
 name|debug
 condition|)
-block|{
-name|System
-operator|.
-name|out
-operator|.
-name|println
-argument_list|(
-literal|"\ncycle: "
+name|testName
+operator|=
+literal|"disk full test "
 operator|+
 name|methodName
 operator|+
-literal|": "
+literal|" with disk full at "
 operator|+
 name|diskFree
 operator|+
-literal|" bytes"
-argument_list|)
+literal|" bytes autoCommit="
+operator|+
+name|autoCommit
 expr_stmt|;
-block|}
 block|}
 else|else
 block|{
@@ -1360,7 +1345,21 @@ if|if
 condition|(
 name|debug
 condition|)
-block|{
+name|testName
+operator|=
+literal|"disk full test "
+operator|+
+name|methodName
+operator|+
+literal|" with unlimited disk space autoCommit="
+operator|+
+name|autoCommit
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|debug
+condition|)
 name|System
 operator|.
 name|out
@@ -1369,13 +1368,9 @@ name|println
 argument_list|(
 literal|"\ncycle: "
 operator|+
-name|methodName
-operator|+
-literal|", same writer: unlimited disk space"
+name|testName
 argument_list|)
 expr_stmt|;
-block|}
-block|}
 name|dir
 operator|.
 name|setMaxSizeInBytes
@@ -1574,6 +1569,7 @@ operator|+
 name|e
 argument_list|)
 expr_stmt|;
+comment|// e.printStackTrace(System.out);
 block|}
 if|if
 condition|(
@@ -1585,7 +1581,11 @@ block|{
 name|e
 operator|.
 name|printStackTrace
-argument_list|()
+argument_list|(
+name|System
+operator|.
+name|out
+argument_list|)
 expr_stmt|;
 name|fail
 argument_list|(
@@ -1694,7 +1694,11 @@ block|{
 name|e
 operator|.
 name|printStackTrace
-argument_list|()
+argument_list|(
+name|System
+operator|.
+name|out
+argument_list|)
 expr_stmt|;
 name|fail
 argument_list|(
@@ -1790,7 +1794,11 @@ block|{
 name|err
 operator|.
 name|printStackTrace
-argument_list|()
+argument_list|(
+name|System
+operator|.
+name|out
+argument_list|)
 expr_stmt|;
 name|fail
 argument_list|(
@@ -1844,7 +1852,11 @@ block|{
 name|e
 operator|.
 name|printStackTrace
-argument_list|()
+argument_list|(
+name|System
+operator|.
+name|out
+argument_list|)
 expr_stmt|;
 name|fail
 argument_list|(
@@ -1905,7 +1917,11 @@ block|{
 name|err
 operator|.
 name|printStackTrace
-argument_list|()
+argument_list|(
+name|System
+operator|.
+name|out
+argument_list|)
 expr_stmt|;
 name|fail
 argument_list|(
